2010-08-05  Asa Ayers  <Asa.Ayers@Gmail.com>

- Fixed Bug 22 - Exchanging player bags for bank bags changes invested
- Fixed Bug 23 - When you purchase multiple stacks of the same item and it is one you have not invested in yet, ItemAuditor mistakenly counted items you have not yet pulled from the mail as items you already owned. This resulted in those items being counted twice.

2010-08-01  Asa Ayers  <Asa.Ayers@Gmail.com>

- Fixed the tooltip so that it is green if the auction price exactly matches your threshold.
- Changed the QuickAuctions decider to consider the number already owned and only calculate based on what needs to be crated.
- Fixed the QuickAuctions decider to return the number of items to be created instead of the number of times to create. This makes a difference with things like Runescroll of Fortitude where 5 are created at once.
- Fixed a problem with how prices were being pulled from Auctioneer.

2010-07-29  Asa Ayers  <Asa.Ayers@Gmail.com>

- Fixed a bug where tradeskill that don't produce items, like Inscription Research, cause IA to crash.
- Added some API enhancements.
- Added ArkInventory as an optional dependency so it will be loaded before IA.

2010-07-28  Asa Ayers  <Asa.Ayers@Gmail.com>

- Fixed a bug with the crafting threshold options.
- Updated /ia queue so that it is a shortcut to using /ia crafting and then clicking export.
- Added integration with ArkInventory. You can set up rules that use "itemauditor('profitable')" or "itemauditor('qa')" to find items managed by QuickAuctions.
- Added a public API so other addon developers can register themselves as a queue destination and added a UI so users can select that destination.
- Added a config option to control how many extra copies of an item are created if its being managed with QA. The previous behaveior was to add 25% to whatever QA would normally post. Now it defaults to 0% and is user configurable.
- Added options to enable or disable crafting deciders.
